Corrected navigation links

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -29,7 +29,7 @@ layout: compress
                     </p><!-- /.entry-reading-time -->
                     {% endif %}
                     {% if page.project %}
-                    <a class="btn zoombtn" href="{{site.url}}/projects/">
+                    <a class="btn zoombtn" href="{{site.baseurl}}/projects/">
                         {% else %}
                         <a class="btn zoombtn" href="{{site.url}}/posts/">
                             {% endif %}
