--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -23,7 +23,7 @@ layout: compress
                     <img src="{{ site.logo }}" class="img-circle zoombtn">
                 </a>
                 <h3 class="title">
-                    <a class="zoombtn" href="{{ site.url }}">
+                    <a class="zoombtn" href="{{ site.baseurl }}">
                         <p style="font-size:1.2rem;font-weight:300">{{ site.title }}</p>
                     </a>
                 </h3>
@@ -36,13 +36,13 @@ layout: compress
                 {% include social-links.html %}
                 <hr class="hr-line">
                 <h3 class="title">
-                    <a class="btn zoombtn" href="{{ site.url }}/about">
+                    <a class="btn zoombtn" href="{{ site.baseurl }}/about">
                         About
                     </a>
-                    <a class="btn zoombtn" href="{{ site.url }}/posts">
+                    <a class="btn zoombtn" href="{{ site.baseurl }}/posts">
                         Posts
                     </a>
-                    <a class="btn zoombtn" href="{{ site.url }}/projects">
+                    <a class="btn zoombtn" href="{{ site.baseurl }}/projects">
                         Projects
                     </a>
                 </h3>
