--- a/_layouts/post-list.html
+++ b/_layouts/post-list.html
@@ -30,9 +30,9 @@ layout: compress
                     {% if post.project == null %}
                     <ul>
                         <li class="wow fadeInLeft" data-wow-duration="1.5s">
-                            <a class="zoombtn" href="{{ site.url }}{{ post.url }}">{{ post.title }}</a>
+                            <a class="zoombtn" href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a>
                             <p>{{ post.excerpt }}</p>
-                            <a href="{{ site.url }}{{ post.url }}" class="btn zoombtn">Read More</a>
+                            <a href="{{ site.baseurl }}{{ post.url }}" class="btn zoombtn">Read More</a>
                         </li>
                     </ul>
                     {% endif %}
@@ -42,7 +42,7 @@ layout: compress
         </div>
     </header>
     {% include scripts.html %}
-    <script src="{{ site.url }}/assets/js/wow.min.js"></script>
+    <script src="{{ site.baseurl }}/assets/js/wow.min.js"></script>
     <script type="text/javascript">
         (new WOW).init();
     </script>
