--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -31,7 +31,7 @@ layout: compress
                     {% if page.project %}
                     <a class="btn zoombtn" href="{{site.baseurl}}/projects/">
                         {% else %}
-                        <a class="btn zoombtn" href="{{site.url}}/posts/">
+                        <a class="btn zoombtn" href="{{site.baseurl}}/posts/">
                             {% endif %}
                             <i class="fa fa-chevron-left"></i>
                         </a>
