need blog post about artificial soldiers

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -16,6 +16,34 @@ layout: compress
 <body>
     {% include nav.html %}
     <!-- Header -->
+    <li class="slide s-section-1 s-first-visible-section" id="section-f_de4cf792-9bd2-4c70-85f6-5117032a5a08">
+        <div class="waypoint"></div><a class="section-anchor"></a>
+        <div>
+            <div class="s-bg-image s-bg-light-text s-new-title-section s-section  _animate-background" data-react-style="{"backgroundRepeat":"no-repeat","backgroundSize":"cover","backgroundColor":"transparent","backgroundPosition":"50% 50%"}"
+              style="background-repeat: no-repeat; background-size: 1495.45px 841px; background-color: transparent; background-position: -6.22545px 0px; background-image: url(assets/img/cover.jpg); min-height: 0px; background-attachment: fixed; padding-top: 354px; padding-bottom: 354px;">
+                <div class="container">
+                    <div class="sixteen columns">
+                        <div class="s-title-group s-only-title-group ">
+                            <div class="s-subtitle">
+                                <div class="s-component s-text">
+                                    <h4 class="s-component-content s-font-heading">
+                                        <p style="font-size: 130%;" class="s-text-color-white"><em>Hey, I'm</em></p>
+                                    </h4>
+                                </div>
+                            </div>
+                            <div class="s-title sb-title-center-align has-fresh-line">
+                                <div class="s-component s-text">
+                                    <h1 class="s-component-content s-font-title">
+                                        <p style="text-align: center; font-size: 130%;"><strong>Ashir Borah</strong></p>
+                                    </h1>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </li>
     <header class="header flex" role="banner">
         <div class="container animated fadeIn">
             <div class="row">
