Reverted homepage back to working state

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -16,7 +16,7 @@ layout: compress
 <body>
     {% include nav.html %}
     <!-- Header -->
-    <li class="slide s-section-1 s-first-visible-section" id="section-f_de4cf792-9bd2-4c70-85f6-5117032a5a08">
+    <!-- <li class="slide s-section-1 s-first-visible-section" id="section-f_de4cf792-9bd2-4c70-85f6-5117032a5a08">
         <div class="waypoint"></div><a class="section-anchor"></a>
         <div>
             <div class="s-bg-image s-bg-light-text s-new-title-section s-section  _animate-background" data-react-style="{"backgroundRepeat":"no-repeat","backgroundSize":"cover","backgroundColor":"transparent","backgroundPosition":"50% 50%"}"
@@ -43,7 +43,7 @@ layout: compress
                 </div>
             </div>
         </div>
-    </li>
+    </li> -->
     <header class="header flex" role="banner">
         <div class="container animated fadeIn">
             <div class="row">
